--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "private": true,
-    "name": "webowe-pogawedki-1",
+    "name": "webowe-pogawedki",
     "description": "",
     "version": "0.0.0",
     "license": "MIT",
@@ -14,6 +14,6 @@
     "devDependencies": {},
     "repository": {
         "type": "git",
-        "url": "git@github.com:piecioshka/webowe-pogawedki-1.git"
+        "url": "git@github.com:piecioshka/webowe-pogawedki.git"
     }
 }
